--- a/bblayers.conf
+++ b/bblayers.conf
@@ -9,4 +9,6 @@ BBLAYERS ?= " \
   /home/nawres/yocto/poky/meta \
   /home/nawres/yocto/poky/meta-poky \
   /home/nawres/yocto/poky/meta-yocto-bsp \
+  /home/nawres/yocto/poky/meta-application \
   "
+
