--- a/local.conf
+++ b/local.conf
@@ -3,6 +3,9 @@
 MACHINE ??= "qemux86-64"
 
 IMAGE_INSTALL:append=" helloworld"
+#this to add the recipe hello to the image-minimal 
+
+
 
 # These are some of the more commonly used values. Looking at the files in the
 # meta/conf/machine directory, or the conf/machine directory of any additional layers
